[package]
name = "livekit-ssl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
livekit = { git = "https://github.com/robtfm/client-sdk-rust", branch="h264-false", features=["native-tls"] }
reqwest = { version = "0.11", features = ["json", "native-tls", "blocking"] }
futures-lite = "1.13"
